[package]
name = "llama-tch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.10.3"
anyhow = "1.0.69"
serde =  { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sentencepiece = { git = "https://github.com/framp/sentencepiece" }
tokenizers = "0.13.3"
